# pskelcc

./: CMakeLists.txt
benchmarks/PPCG/common/: common.h  common.mk
benchmarks/PSkel/cloudsim/: cloudsim-base.ll  cloudsim.c  cloudsim.ll
benchmarks/PSkel/common/: common.mk
benchmarks/PSkel/fur/: Makefile  fur-base.ll  fur.c  fur.ll
benchmarks/PSkel/gol/: gol-base.ll  gol.c  gol.ll
benchmarks/Polybench/common/: common.mk  options.mk  polybenchUtilFuncts.h
benchmarks/jacobi3D/: README.txt  stencil_3d_13point.cu  stencil_3d_19point.cu  stencil_3d_25point.cu  stencil_3d_31point.cu  stencil_3d_7point.cu
benchmarks/jacobi3D/experiments/: .baseline.exec  .baseline.metrics  .baseline.nvprof  13pt_0_128.exec  13pt_0_128.metrics  13pt_0_128.nvprof  13pt_0_256.exec  13pt_0_256.metrics  13pt_0_256.nvprof  13pt_0_64.exec  13pt_0_64.metrics  13pt_0_64.nvprof  13pt_1247_1024.metrics  13pt_1247_1024.nvprof  13pt_1247_128.exec  13pt_1247_128.metrics  13pt_1247_128.nvprof  13pt_1247_256.exec  13pt_1247_256.metrics  13pt_1247_256.nvprof  13pt_1247_512.exec  13pt_1247_512.metrics  13pt_1247_512.nvprof  13pt_1247_64.exec  13pt_1247_64.metrics  13pt_1247_64.nvprof  13pt_27_1024.metrics  13pt_27_1024.nvprof  13pt_27_128.exec  13pt_27_128.metrics  13pt_27_128.nvprof  13pt_27_256.exec  13pt_27_256.metrics  13pt_27_256.nvprof  13pt_27_512.exec  13pt_27_512.metrics  13pt_27_512.nvprof  13pt_27_64.exec  13pt_27_64.metrics  13pt_27_64.nvprof  (+151 more)
src/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  Stencil.cpp  Stencil.h
test/: 2DJacobi.c  Makefile  stencil-base.ll  stencil.ll
(+215 files in other folders)
